Updated task scheduler to cache Sling articles every 15 minutes. The home page now ggrabs the cache from the db so no more lag time when it loads. Also added --> new users are verified through the SmartWaiver API to ensure waivers are on record before they are allowed to checkout.

--- a/Check_Out_App_ULC/Check_Out_App_ULC.csproj
+++ b/Check_Out_App_ULC/Check_Out_App_ULC.csproj
@@ -295,6 +295,9 @@
     <Compile Include="Models\tb_Reports.cs">
       <DependentUpon>Checkin_Checkout.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\tb_SlingCache.cs">
+      <DependentUpon>Checkin_Checkout.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\TimeClock.MetaData.cs" />
     <Compile Include="Models\ViewModels.cs" />
     <Compile Include="Models\v_CSUG_DIRECTORY_ALL_LOCAL_No_Dupes_forCheckinCheckout.cs">
