Added ability to export Usage Reports to an Excel file.

--- a/Check_Out_App_ULC/Check_Out_App_ULC.csproj
+++ b/Check_Out_App_ULC/Check_Out_App_ULC.csproj
@@ -244,6 +244,7 @@
       <DependentUpon>Checkin_Checkout.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\CheckoutDetails.cs" />
+    <Compile Include="Models\ExportModels.cs" />
     <Compile Include="Models\SmartWaiver.cs" />
     <Compile Include="Models\Sling.cs" />
     <Compile Include="Models\CSUCheckinCheckoutContext.cs" />
