Added queries to Usage Reports, cleaned up UI.

--- a/Check_Out_App_ULC/Check_Out_App_ULC.csproj
+++ b/Check_Out_App_ULC/Check_Out_App_ULC.csproj
@@ -506,6 +506,8 @@
     <Content Include="Views\Home\_SlingArticles.cshtml" />
     <Content Include="Views\tb_CSUCheckoutCheckin\_QueryCheckoutsByDateResults.cshtml" />
     <Content Include="Views\tb_CSUCheckoutCheckin\_QueryCheckoutsByHourResults.cshtml" />
+    <Content Include="Views\tb_CSUCheckoutCheckin\_QueryCheckoutsByDayOfWeekResults.cshtml" />
+    <Content Include="Views\tb_CSUCheckoutCheckin\_QueryCheckoutsByItemResults.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Report\" />
